# OpenMP_pThreads_lab

./: CMakeLists.txt  main.c  play_utils.c  play_utils.h  threads.c  threads.h
